Updated demo code from internal repository

--- a/firmware/src/CMakeLists.txt
+++ b/firmware/src/CMakeLists.txt
@@ -19,6 +19,7 @@ set(DBB-FIRMWARE-SOURCES
     demos/demo_detect_touch.c
     demos/demo_animation.c
     demos/demo_mini_pong.c
+    demos/demo_crypto.c
     demos/demo_sd.c
     main.c
 )
